tests/baselines/reference/parserArrowFunctionExpression4.errors.txt
==== tests/cases/compiler/parserArrowFunctionExpression4.ts (2 errors) ====
    a = (() => { }, a)
    ~
!!! parserArrowFunctionExpression4.ts(1,1): error TS2095: Cannot find name 'a'.
                    ~
!!! parserArrowFunctionExpression4.ts(1,17): error TS2095: Cannot find name 'a'.